<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_toggle_fullscreen"
        android:checkable="true"
        android:onClick="toggleStatisticsFullScreenMode"
        android:orderInCategory="1"
        android:title="@string/title_full_screen_mode"
        android:visible="true" />
    <item
        android:id="@+id/action_toggle_printing"
        android:checkable="true"
        android:onClick="toggleStatisticsPrintingMode"
        android:orderInCategory="1"
        android:title="@string/title_colors_for_printing"
        android:visible="true" />
    <item
        android:id="@+id/share_this_screen"
        android:checkable="false"
        android:onClick="statisticsShare"
        android:orderInCategory="1"
        android:title="@string/title_share_save_this_screen"
        android:visible="true" />
    <item
        android:id="@+id/statistics_settings"
        android:orderInCategory="1"
        android:title="@string/parameters"
        android:visible="true">
        <menu>
            <group
                android:id="@+id/visibility_settings"
                android:checkableBehavior="all"
                android:visible="true">
                <item
                    android:id="@+id/action_show_absolutes"
                    android:onClick="toggleStatisticsShowAbsolutes"
                    android:title="@string/absolute_s_pref" />
                <item
                    android:id="@+id/action_show_median"
                    android:onClick="toggleStatisticsShowMedianBG"
                    android:title="@string/median_bg_pref" />
                <item
                    android:id="@+id/action_show_a1cestimate"
                    android:onClick="toggleStatisticsShowA1C"
                    android:title="@string/hba1c_est_pref" />
                <item
                    android:id="@+id/action_show_sd"
                    android:onClick="toggleStatisticsShowSD"
                    android:title="@string/stddev_pref" />
                <item
                    android:id="@+id/action_show_relsd"
                    android:onClick="toggleStatisticsShowRelSD"
                    android:title="@string/relative_sd_cv_pref" />
                <item
                    android:id="@+id/action_show_gvi"
                    android:onClick="toggleStatisticsShowGVI"
                    android:title="GVI" />
                <item
                    android:id="@+id/action_show_pgs"
                    android:onClick="toggleStatisticsShowPGS"
                    android:title="PGS" />
            </group>
        </menu>
    </item>

</menu>